# Khost

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  clean.sh
experiments/fuzz/: .gitignore
experiments/fuzz/01_PLC/: config.yml
experiments/fuzz/01_PLC/crashes/: id:000000,sig:00,src:000000,time:7123,execs:5085,op:havoc,rep:15  id:000041,sig:00,src:000192,time:260059,execs:260829,op:havoc,rep:4  id:000047,sig:00,src:000197,time:296988,execs:311804,op:havoc,rep:1  id:000054,sig:00,src:000288,time:682443,execs:740501,op:havoc,rep:4  id:000074,sig:00,src:000414,time:9648045,execs:5625492,op:havoc,rep:13
experiments/fuzz/02_Drone/: config.yml  valid_basic_blocks.txt
experiments/fuzz/03_Heat_Press/crashes/: id:000000,sig:00,src:000322,time:1463780,execs:1093313,op:havoc,rep:40  id:000080,sig:00,src:000555,time:8306767,execs:2549128,op:havoc,rep:2
experiments/fuzz/04_stm32_sine/: valid_basic_blocks.txt
experiments/fuzz/05_LibJPEG_Decoding/: config_mmio.yml
experiments/fuzz/05_LibJPEG_Decoding/crashes/: id:000012,src:000000,time:93,execs:347,op:quick,pos:25,+cov
experiments/fuzz/06_avem/: avem.elf
experiments/fuzz/07_zephyr-modbus/: zephyr-modbus.elf
experiments/fuzz/08_atmel_6lowpan_udp_rx/: config.yml
experiments/fuzz/08_atmel_6lowpan_udp_rx/crashes/: id:000229,src:000221,time:150342,execs:318612,op:inf,rep:3,+cov
experiments/fuzz/09_stm32_tcp_echo_client/crashes/: id:000000,sig:00,src:000000,time:902,execs:2264,op:havoc,rep:2  id:000074,sig:00,src:000694,time:1315006,execs:815758,op:havoc,rep:3
experiments/fuzz/10_stm32_tcp_echo_server/: config.yml
experiments/fuzz/10_stm32_tcp_echo_server/crashes/: id:000000,sig:00,src:000000,time:3315,execs:5228,op:havoc,rep:2  id:000027,sig:00,src:000185,time:244360,execs:372081,op:havoc,rep:19
experiments/fuzz/11_BlueMicro_BLE/: BlueMicro_BLE.elf  valid_basic_blocks.txt
experiments/fuzz/12_nuttx-nsh/: config.yml
experiments/fuzz/12_nuttx-nsh/crashes/: id:000086,sig:00,src:000674,time:2183950,execs:538403,op:havoc,rep:2
experiments/fuzz/overhead_coverage/: config-nocov.yml  config.yml
experiments/libafl_fuzz/: .gitignore
experiments/libafl_fuzz/01_PLC/: config.yml
experiments/libafl_fuzz/02_Drone/: config.yml
experiments/libafl_fuzz/03_Heat_Press/: config.yml
experiments/libafl_fuzz/04_stm32_sine/: config.yml
experiments/libafl_fuzz/05_LibJPEG_Decoding/: config.yml  config_hal.yml  valid_basic_blocks.txt
experiments/libafl_fuzz/06_avem/: config.yml  valid_basic_blocks.txt
experiments/libafl_fuzz/07_zephyr-modbus/: config.yml  valid_basic_blocks.txt
experiments/libafl_fuzz/09_stm32_tcp_echo_client/: config.yml
experiments/libafl_fuzz/11_BlueMicro_BLE/: config.yml
experiments/libafl_fuzz/12_nuttx-nsh/: nuttx-nsh.elf  valid_basic_blocks.txt
experiments/patches/fuzzware/: README.md  fuzzware.diff  get_afl.sh
experiments/patches/halfuzz/: README.md  build_unicorn_support.sh  halfuzz.diff
experiments/patches/qemu/: README.md  stm32f405_soc.h
experiments/performance/: README.md
experiments/performance/coremark-pro-linux/: cjpeg-rose7-preset.elf  core.elf  linear_alg-mid-100x100-sp.elf  nnet_test.elf  parser-125k.elf  radix2-big-64k.elf  sha-test.elf  zip-test.elf
experiments/performance/coremark-pro-mcu/: tcg_plugin.c
experiments/performance/coremark-pro-mcu/cjpeg/: config.yml  coremark-pro.elf
experiments/performance/coremark-pro-mcu/core/: config.yml  coremark-pro.elf
experiments/performance/coremark-pro-mcu/linear/: config.yml  coremark-pro.elf
experiments/performance/coremark-pro-mcu/nnet/: config.yml  coremark-pro.elf
experiments/performance/coremark-pro-mcu/parser/: config.yml  coremark-pro-nolock.elf  coremark-pro.elf
experiments/performance/coremark-pro-mcu/radix/: config.yml  coremark-pro.elf
experiments/performance/coremark-pro-mcu/sha/: config.yml  coremark-pro.elf
experiments/performance/coremark-pro-mcu/zip/: config.yml  coremark-pro.elf
experiments/performance/simbench-mcu/coprocessor/: config.yml  simbench.elf
experiments/performance/simbench-mcu/device-access/: simbench.elf
experiments/performance/simbench-mcu/dfault/: simbench.elf
prebuild/: khost  khost-debug
scripts/: color_coverage.py  coremark_test_khost.py  coremark_test_native.sh  coremark_test_qemu.sh  count_overhead_cov.py  fuzz_replay.py  fuzz_run_crash.py  fuzz_start.py  hugepage.sh  idapython_genconf.py  libafl_fuzz_replay.py  libafl_fuzz_start.py  simbench_test_khost.py  simbench_test_qemu.sh
src/: CMakeLists.txt  main.rs
src/common/: data_def.h  data_offset.h  global.h  rt_global.h
src/engine/: CMakeLists.txt  en_board.cpp  en_board_full.cpp  en_board_para.cpp  en_config.cpp  en_cpu.cpp  en_cpu_full.cpp  en_cpu_para.cpp  en_global.cpp  lib.cpp
src/engine/device/: dev_fuzzware_model.cpp  dev_mmio.cpp  dev_nvic.cpp  dev_sysctl.cpp  dev_systick.cpp
src/engine/device/include/: dev_fuzzware_model.h  dev_mmio.h  dev_nvic.h  dev_sysctl.h  dev_systick.h
src/engine/include/: en_board.h  en_board_full.h  en_board_para.h  en_config.h  en_cpu.h  en_cpu_full.h  en_cpu_para.h  en_global.h  lib.h
src/engine/loader/: .gitignore  coverage.cpp  disasm.cpp  loader.cpp  trampoline.cpp
src/engine/loader/include/: addition.h  coverage.h  disasm.h  loader.h  trampoline.h
src/engine/runtime/: rt_compile.py
src/engine/runtime/guest/: CMakeLists.txt  rt_cpu.c  rt_data.c  rt_debug.c  rt_emu.c  rt_fault.c  rt_fuzzware.c  rt_handler.c  rt_handler_asm.S  rt_harness.c  rt_link.lds  rt_nvic.c  rt_startup_asm.S  rt_sysctl.c  rt_systick.c  rt_trigger.c
src/engine/runtime/guest/include/: rt_cpu.h  rt_data.h  rt_debug.h  rt_emu.h  rt_fault.h  rt_fuzzware.h  rt_handler.h  rt_nvic.h  rt_sysctl.h  rt_systick.h  rt_trigger.h
src/fuzzer/: CMakeLists.txt  afl-cc.c  afl-forkserver.c  afl-fuzz-bitmap.c  afl-fuzz-init.c  afl-fuzz-one.c  afl-fuzz-run.c  afl-fuzz-stats.c  afl-fuzz.c  afl-showmap.c  afl-tmin.c
src/fuzzer/include/: afl-fuzz.h  config.h
src/runner/: CMakeLists.txt  gdbstub.cpp  khost.cpp  stacktrace.cpp
src/runner/include/: gdbstub.h  stacktrace.h
(+20 files in other folders)
